@@ -164,20 +164,27 @@ def pickle_cache_function(pattern, time_threshold, function):
         # timestamps to check.
         exists = path.exists(cache_filename)
         if exists:
-            try:
-                with open(cache_filename, 'rb') as file:
+            with open(cache_filename, 'rb') as file:
+                try:
                     result = pickle.load(file)
 
-                # Check that the latest timestamp has not been written after the
-                # cache file.
-                entries, errors, options_map = result
-                if not needs_refresh(options_map):
-                    # All timestamps are legit; cache hit.
-                    return result
+                except Exception as exc:
+                    # Note: Not a big fan of doing this, but here we handle all
+                    # possible exceptions because unpickling of an old or
+                    # corrupted pickle file manifests as a variety of different
+                    # exception types.
 
-            except EOFError:
-                # The cache file is corrupted; ignore it and recompute.
-                pass
+                    # The cache file is corrupted; ignore it and recompute.
+                    logging.error("Cache file is corrupted: %s; recomputing.", exc)
+                    result = None
+
+                else:
+                    # Check that the latest timestamp has not been written after the
+                    # cache file.
+                    entries, errors, options_map = result
+                    if not needs_refresh(options_map):
+                        # All timestamps are legit; cache hit.
+                        return result
 
         # We failed; recompute the value.
         if exists:
